--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit
-openai
-sqlite3-binary
+pysqlite3-binary    
+streamlit==1.33.0
 chromadb
-langchain-community
-langchain
-tiktoken
+langchain==0.1.17               
+langchain-community==0.0.20        
+langchain-openai==0.0.6            
+openai==1.23.2
+tiktoken==0.6.0
 protobuf==3.20.3
