--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 pysqlite3-binary    
 streamlit==1.33.0
 chromadb
-langchain==0.1.17               
+langchain==0.1.17
+langchain-community==0.0.36
+langchain-openai==0.0.6               
 openai==1.23.2
 tiktoken==0.6.0
 protobuf==3.20.3
