--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ langchain==0.1.17
 langchain-community==0.0.36
 langchain-openai==0.1.14
 openai==1.23.2
-tiktoken==0.6.0
+tiktoken
 protobuf==3.20.3
