--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ chromadb
 langchain==0.1.17
 langchain-community==0.0.36
 langchain-openai==0.1.14
-openai==1.23.2
+openai
 tiktoken
 protobuf==3.20.3
