--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 pysqlite3-binary    
-streamlit==1.33.0
+streamlit
 chromadb
-langchain==0.1.17
-langchain-community==0.0.36
-langchain-openai==0.1.14
+langchain
+langchain-community
+langchain-openai
 openai
 tiktoken
 protobuf==3.20.3
